# HardnestedBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  bump_version.py  compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  release.yml
