[project]
name = "hardnestedbot"
version = "0.2.1"
description = "Telegram bot for Flipper Hardnested Recovery on the go "
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["anyio>=4.7.0", "python-telegram-bot[ext]>=21.9"]

[tool.uv]
dev-dependencies = [
    "gitpython>=3.1.44",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.8.3",
    "semver>=3.0.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",   # pydocstyle
    "CPY", # flake8-copyright
]

[tool.mypy]
strict = true
local_partial_types = true
allow_redefinition_new = true
