[project]
name = "hardnestedbot"
version = "0.3.2"
description = "Telegram bot for Flipper Hardnested Recovery on the go "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anyio>=4.12.1",
  "python-telegram-bot[ext]>=22.6",
]

[dependency-groups]
dev = [
  "gitpython>=3.1.47",
  "mypy>=1.19.1",
  "prek>=0.3.5",
  "ruff>=0.15.5",
  "semver>=3.0.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "D",   # pydocstyle
  "CPY", # flake8-copyright
]

[tool.mypy]
strict = true
local_partial_types = true
allow_redefinition_new = true
