[project]
name = "hardnestedbot"
version = "0.3.5"
description = "Telegram bot for Flipper Hardnested Recovery on the go "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anyio>=4.13.0",
  "python-telegram-bot[ext]>=22.7",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "prek>=0.4.1",
  "ruff>=0.15.14",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "D",   # pydocstyle
  "CPY", # flake8-copyright
]

[tool.mypy]
strict = true
local_partial_types = true
allow_redefinition_new = true
